feat 1.优化 区块实体过多时的提示 2.优化 区块实体过多时的清理逻辑 3.添加配置项 区块实体过多的清理模式 4.添加配置项 区块实体清理时保留的实体数量